# curso-apis-python-alumnos

./: .gitignore  README.md  pyproject.toml
modulo-1-fundamentos/clase-01-introduccion-typing/ejemplos/: 01_basico.py  02_intermedio.py  03_avanzado.py  errores_comunes.py
modulo-1-fundamentos/clase-01-introduccion-typing/ejercicios/: ejercicio_01.py  ejercicio_02.py  ejercicio_03.py
modulo-1-fundamentos/clase-01-introduccion-typing/recursos/: api_conceptos.http  slides.md  typing_cheatsheet.md
modulo-1-fundamentos/clase-02-decoradores/ejemplos/: 01_basico.py  02_intermedio.py  03_avanzado.py  errores_comunes.py
modulo-1-fundamentos/clase-02-decoradores/ejercicios/: ejercicio_01.py  ejercicio_02.py  ejercicio_03.py
modulo-1-fundamentos/clase-02-decoradores/recursos/: decoradores_cheatsheet.md  slides.md
modulo-1-fundamentos/clase-03-poo-apis/ejemplos/: 01_basico.py  02_intermedio.py  03_avanzado.py  errores_comunes.py
modulo-1-fundamentos/clase-03-poo-apis/ejercicios/: ejercicio_01.py  ejercicio_02.py  ejercicio_03.py
modulo-1-fundamentos/clase-03-poo-apis/recursos/: poo_cheatsheet.md  slides.md
modulo-1-fundamentos/clase-04-arquitectura-rest/ejemplos/: 01_recursos_uris.py  02_metodos_http.py  03_codigos_estado.py  04_estructura_respuestas.py  api_design.http
modulo-1-fundamentos/clase-04-arquitectura-rest/ejercicios/: ejercicio_01.py  ejercicio_02.py  ejercicio_03.py
modulo-2-fastapi/: .gitkeep
modulo-2-fastapi/clase-extra-apirouter/: README.md  explicacion_ejemplos.md  speech.md  teoria.md
modulo-4-produccion/: .gitkeep
(+163 files in other folders)
